<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/_textViev"
        style="@style/MyThemeTextViewVertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btm_7"
        style="@style/MyThemeVertical"
        android:hint="@string/_7"
        app:layout_constraintBottom_toTopOf="@id/btm_4"
        app:layout_constraintEnd_toStartOf="@id/btm_8"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/_textViev"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btm_8"
        style="@style/MyThemeVertical"
        android:hint="@string/_8"
        app:layout_constraintBottom_toTopOf="@id/btm_5"
        app:layout_constraintEnd_toStartOf="@id/btm_9"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/btm_7"
        app:layout_constraintTop_toBottomOf="@id/_textViev"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btm_9"
        style="@style/MyThemeVertical"
        android:hint="@string/_9"
        app:layout_constraintBottom_toTopOf="@id/btm_6"
        app:layout_constraintEnd_toStartOf="@id/btm_div"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/btm_8"
        app:layout_constraintTop_toBottomOf="@id/_textViev"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btm_4"
        style="@style/MyThemeVertical"
        android:hint="@string/_4"
        app:layout_constraintBottom_toTopOf="@id/btm_1"
        app:layout_constraintEnd_toStartOf="@id/btm_5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btm_7"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btm_5"
        style="@style/MyThemeVertical"
        android:hint="@string/_5"
        app:layout_constraintBottom_toTopOf="@id/btm_2"
        app:layout_constraintEnd_toStartOf="@id/btm_6"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/btm_4"
        app:layout_constraintTop_toBottomOf="@id/btm_8"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btm_6"
        style="@style/MyThemeVertical"
        android:hint="@string/_6"
        app:layout_constraintBottom_toTopOf="@id/btm_3"
        app:layout_constraintEnd_toStartOf="@id/btm_mul"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/btm_5"
        app:layout_constraintTop_toBottomOf="@id/btm_9"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btm_1"
        style="@style/MyThemeVertical"
        android:hint="@string/_1"
        app:layout_constraintBottom_toTopOf="@id/btm_0"
        app:layout_constraintEnd_toStartOf="@id/btm_2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btm_4"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btm_2"
        style="@style/MyThemeVertical"
        android:hint="@string/_2"
        app:layout_constraintBottom_toTopOf="@id/btm_clear"
        app:layout_constraintEnd_toStartOf="@id/btm_3"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/btm_1"
        app:layout_constraintTop_toBottomOf="@id/btm_5"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btm_3"
        style="@style/MyThemeVertical"
        android:hint="@string/_3"
        app:layout_constraintBottom_toTopOf="@id/btm_equality"
        app:layout_constraintEnd_toStartOf="@id/btm_minus"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/btm_2"
        app:layout_constraintTop_toBottomOf="@id/btm_6"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btm_0"
        style="@style/MyThemeVertical"
        android:hint="@string/_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btm_clear"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btm_1"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btm_clear"
        style="@style/MyThemeVertical"
        android:hint="@string/_clear"
        android:textSize="@dimen/text_size2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btm_equality"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/btm_0"
        app:layout_constraintTop_toBottomOf="@id/btm_2"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btm_equality"
        style="@style/MyThemeVertical"
        android:hint="@string/_equality"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btm_plus"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/btm_clear"
        app:layout_constraintTop_toBottomOf="@id/btm_3"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btm_plus"
        style="@style/MyThemeVertical"
        android:hint="@string/_plus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/btm_equality"
        app:layout_constraintTop_toBottomOf="@id/btm_minus"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btm_minus"
        style="@style/MyThemeVertical"
        android:hint="@string/_minus"
        app:layout_constraintBottom_toTopOf="@id/btm_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/btm_3"
        app:layout_constraintTop_toBottomOf="@id/btm_mul"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btm_mul"
        style="@style/MyThemeVertical"
        android:hint="@string/_mul"
        app:layout_constraintBottom_toTopOf="@id/btm_minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/btm_6"
        app:layout_constraintTop_toBottomOf="@id/btm_div"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btm_div"
        style="@style/MyThemeVertical"
        android:hint="@string/_div"
        app:layout_constraintBottom_toTopOf="@id/btm_mul"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/btm_9"
        app:layout_constraintTop_toBottomOf="@id/_textViev"
        app:layout_constraintVertical_chainStyle="packed" />


</androidx.constraintlayout.widget.ConstraintLayout>